# src/main/java/uk/gov/hmcts/darts/annotation/controller/AnnotationController.java
@@ -2,16 +2,21 @@ package uk.gov.hmcts.darts.annotation.controller;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.core.io.Resource;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
+import uk.gov.hmcts.darts.annotation.controller.dto.AnnotationResponseDTO;
 import uk.gov.hmcts.darts.annotation.service.AnnotationService;
 import uk.gov.hmcts.darts.annotations.http.api.AnnotationsApi;
 import uk.gov.hmcts.darts.annotations.model.Annotation;
 import uk.gov.hmcts.darts.annotations.model.PostAnnotationResponse;
 import uk.gov.hmcts.darts.authorisation.annotation.Authorisation;
 
+import static org.springframework.http.HttpHeaders.CONTENT_DISPOSITION;
+import static uk.gov.hmcts.darts.authorisation.enums.ContextIdEnum.ANY_ENTITY_ID;
 import static uk.gov.hmcts.darts.authorisation.enums.ContextIdEnum.HEARING_ID;
+import static uk.gov.hmcts.darts.common.enums.SecurityRoleEnum.ADMIN;
 import static uk.gov.hmcts.darts.common.enums.SecurityRoleEnum.JUDGE;
 
 @RestController
@@ -30,5 +35,31 @@ public class AnnotationController implements AnnotationsApi {
     public ResponseEntity<PostAnnotationResponse> annotationsPost(MultipartFile file, Annotation annotation) {
         var annotationId = annotationService.process(file, annotation);
         return ResponseEntity.ok(new PostAnnotationResponse(annotationId));
+    }
+
+    @Authorisation(
+            bodyAuthorisation = true,
+            contextId = ANY_ENTITY_ID,
+            securityRoles = {JUDGE, ADMIN},
+            globalAccessSecurityRoles = {JUDGE, ADMIN})
+    @Override
+    public ResponseEntity<Resource> downloadAnnotation(Integer annotationId, Integer annotationDocumentId) {
+
+        final AnnotationResponseDTO annotationResponseDTO = annotationService.downloadAnnotationDoc(1, 1);
+
+        return ResponseEntity.ok()
+                .header(
+                        CONTENT_DISPOSITION,
+                        String.format("attachment; filename=\"%s\"", annotationResponseDTO.getFileName())
+                )
+                .header(
+                        "external_location",
+                        String.valueOf(annotationResponseDTO.getExternalLocation())
+                )
+                .header(
+                        "annotation_document_id",
+                        String.valueOf(annotationResponseDTO.getAnnotationDocumentId())
+                )
+                .body(annotationResponseDTO.getResource());
     }
 }
