# src/main/java/uk/gov/hmcts/darts/annotation/controller/dto/AnnotationResponseDTO.java
@@ -1,0 +1,20 @@
+package uk.gov.hmcts.darts.annotation.controller.dto;
+
+import lombok.Builder;
+import lombok.Value;
+import org.springframework.core.io.Resource;
+import org.springframework.http.MediaType;
+
+import java.util.UUID;
+
+@Builder
+@Value
+public class AnnotationResponseDTO {
+
+    Resource resource;
+    String fileName;
+    MediaType mediaType;
+    UUID externalLocation;
+    Integer annotationDocumentId;
+
+}
