# src/main/resources/openapi/annotations.yaml
@@ -48,6 +48,77 @@ paths:
               schema:
                 $ref: './problem.yaml'
 
+  /annotations/{annotation_id}/documents/{annotation_document_id}:
+    get:
+      tags:
+        - Annotations
+      summary: Download Annotation Document
+      operationId: downloadAnnotation
+      parameters:
+        - in: path
+          name: annotation_id
+          schema:
+            type: integer
+          description: "annotation id."
+          required: true
+        - in: path
+          name: annotation_document_id
+          schema:
+            type: integer
+          description: "annotation document id."
+          required: true
+      responses:
+        '200':
+          description: OK
+          content:
+            application/zip:
+              schema:
+                type: string
+                format: binary
+              example:
+                type: "ANNOTATION_102"
+                title: "The audio request is not valid for this action"
+                status: 200
+        '401':
+          description: Unauthorised Error
+        '403':
+          description: Forbidden Error
+          content:
+            application/json+problem:
+              schema:
+                allOf:
+                  - $ref: './problem.yaml'
+                  - type: object
+                    required:
+                      - type
+                    properties:
+                      type:
+                        $ref: '#/components/schemas/AnnotationErrorCode'
+              example:
+                type: "AUTHORISATION_100"
+                title: "User is not authorised for the associated courthouse"
+                status: 403
+        '404':
+          description: Not Found Error
+          content:
+            application/json+problem:
+              schema:
+                $ref: './problem.yaml'
+              example:
+                type: "AUDIO_REQUESTS_103"
+                title: "The requested transformed media cannot be found"
+                status: 404
+        '500':
+          description: The requested data cannot be located
+          content:
+            application/json+problem:
+              schema:
+                $ref: './problem.yaml'
+              example:
+                type: "AUDIO_101"
+                title: "The requested data cannot be located"
+                status: 500
+
 components:
   schemas:
     annotation:
@@ -66,3 +137,27 @@ components:
       properties:
         annotation_id:
           type: integer
+
+    AnnotationErrorCode:
+      type: string
+      enum:
+        - "ANNOTATION_100"
+        - "ANNOTATION_101"
+        - "ANNOTATION_102"
+        - "ANNOTATION_103"
+        - "ANNOTATION_104"
+        - "ANNOTATION_105"
+        - "ANNOTATION_106"
+      x-enum-varnames: [ HEARING_NOT_FOUND, FAILED_TO_UPLOAD_ANNOTATION_DOCUMENT, USER_NOT_AUTHORISED_TO_DOWNLOAD, INVALID_ANNOTATIONID_OR_ANNOTATION_DOCUMENTID, INVALID_ANNOTATIONID_OR_ANNOTATION_DOCUMENTID_FOR_JUDGE, FAILED_TO_DOWNLOAD_ANNOTATION_DOCUMENT]
+
+    AnnotationTitleErrors:
+      type: string
+      enum:
+        - "The requested hearing cannot be found"
+        - "The annotation failed to be uploaded"
+        - "user is not authorised to download annotation documents"
+        - "annotation ID or annotation document ID does not exist"
+        - "invalid annotation id or annotation document id"
+        - "invalid annotation id or annotation document id for judge"
+        - "The annotation failed to be downloaded"
+      x-enum-varnames: [ HEARING_NOT_FOUND, FAILED_TO_UPLOAD_ANNOTATION_DOCUMENT, USER_NOT_AUTHORISED_TO_DOWNLOAD, INVALID_ANNOTATIONID_OR_ANNOTATION_DOCUMENTID, INVALID_ANNOTATIONID_OR_ANNOTATION_DOCUMENTID_FOR_JUDGE, FAILED_TO_DOWNLOAD_ANNOTATION_DOCUMENT]
